syntax="proto3";

package user_v1;

option go_package="./pkg/auth_srv/proto";

service User{
  rpc CreateUser(PostUserRequest) returns (PostUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc LoginUser(LoginRequest) returns(LoginResponse);
}

//CreateUser
message PostUserRequest{
  string surname=2;
  string name=3;
  string middlename=4;
  string phone_number=5;
  string email=6;
  string sex=7;
  string password=8;
}
message PostUserResponse{
  int64 status=1;
  string error=2;
}

//GetUser
message GetUserRequest{
  uint32 id_user=1;
}
message GetUserResponse{
  int64 status=1;
  string error=2;
  UserData data=3;
}
message UserData{
  uint32 id_user=1;
  string surname=2;
  string name=3;
  string middlename=4;
  string phone_number=5;
  string email=6;
  string sex=7;
}
//Login
message LoginRequest{
  string login = 1;
  string password =2;
}
message LoginResponse{
  int64 status=1;
  string error=2;
  string token=3;
}

//TODO: Разобраться с датой рождения
message user{
  uint32 id_user=1;
  string surname=2;
  string name=3;
  string middlename=4;
  string phone_number=5;
  string email=6;
  string sex=7;
  string password=8;
}